# RAE-CRL

./: .coveragerc  .gitignore  .rae_session  LICENSE  README.md  alembic.ini  build_windows.bat  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  rae_crl.spec  requirements.txt
.github/workflows/: ci.yml
apps/crl/: mcp_server.py  run_desktop.py
apps/crl/api/: main.py
apps/crl/cli/: main.py
apps/crl/core/: database.py  models.py
apps/crl/interfaces/: storage.py
apps/crl/services/: export_service.py  ingestion_service.py  rae_client.py  sync_service.py  watchdog_service.py
apps/crl/services/storage/: sql.py
apps/crl/ui/: main.py
docker/: Dockerfile
docs/: STATUS_MVP_1_0.md  rae_crl_roadmap_and_capabilities.md
docs/contracts/: RAE_AGENTIC_CONTRACT.md
docs/plans/: .~lock.RAE_CRL-plan-rozwoju.docx#  .~lock.RAE_CRL-plan-rozwoju_01.docx#  HUMAN_CENTRIC_MVP_DONE.md  HUMAN_CENTRIC_MVP_PLAN.md  PLAN_UI_2_0.md  RAE_CRL-for-sceince.docx  RAE_CRL-plan-rozwoju.docx  RAE_CRL-plan-rozwoju_01.docx  RAE_CRL_IMPLEMENTATION.docx  RAE_CRL_IMPLEMENTATION_EXTRACTED.txt  RAE_CRL_VISION_EXTRACTED.txt
docs/rules/: AGENT_CORE_PROTOCOL.md
migrations/: env.py
migrations/versions/: 05772dc9c181_add_last_synced_at.py  1782b521ddf4_initial_schema.py
scripts/: bootstrap_session.py  check_live_sync.py
tests/: test_api.py  test_desktop_shim.py  test_human_centric.py  test_human_centric_full.py  test_integration.py  test_iso_compliance.py  test_mcp_logic.py  test_rae_client.py  test_storage.py  test_sync_and_governance.py  test_ui_smoke.py
