[tool.poetry]
name = "rae-crl"
version = "0.1.0"
description = "Cognitive Research Loop - Scientific Overlay for RAE"
authors = ["RAE Team"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "apps"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.1"
uvicorn = "^0.30.0"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
httpx = "^0.27.0"
rich = "^13.7.0"
sqlmodel = "^0.0.14"
asyncpg = "^0.29.0"
aiosqlite = "^0.19.0"
alembic = "^1.13.0"
python-dateutil = "^2.8.2"
nicegui = "^1.4.0"
structlog = "^24.1.0"
mcp = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
respx = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=apps"
testpaths = [
    "tests",
]
pythonpath = [
    ".",
    "apps"
]
asyncio_mode = "auto"
